--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -1,14 +1,21 @@
+html {
+    font-size: 15px;
+}
+
+
 .header-input {
     outline: none;
-    width: 631px;
+    width: 619px;
+    padding-left: 10px;
     height: 52px;
     font-size: 14px;
     color: #ffff;
-    background: #5A5C66;
     border: 0;
-    background-image: url("images/search-logo.svg");   
-    background-repeat: no-repeat;    
-    background-position: 4px;
+    background-color: #5A5C66;
+    background-image: url('../../../public/images/search-logo.png');
+    background-repeat: no-repeat; 
+    background-position: 590px;  
+    
 
     &::placeholder {
         font-weight: 400;
